@@ -83,7 +83,6 @@ angular.module('ubrGeoApp')
             source.on('tileloadend', function() {
               spinner.stop();  
             });
-            // console.log('RouteParams: ', $routeParams);
             // extent of the whole world in pseudo mercator projection
             // calculated from WGS 84 (lat: -180° .. 180° lon: -85° .. 85°)    
             var extent = ol.proj.transformExtent([-180,-85,180,85], 'EPSG:4326','EPSG:3857');
@@ -95,17 +94,11 @@ angular.module('ubrGeoApp')
             var mapSize = map.getSize();  // The size in pixels of the map in the DOM.
             var view = map.getView();      // The view that controls this map.
 
-            console.log('maxZoom: ',maxZoom);
-            console.log('maxZoom: ', view.getProperties());
             if ($routeParams.x && $routeParams.y) {
-                // console.log('Parameter x gefunden');
                 var xPixel = $routeParams.x;
                 var yPixel = $routeParams.y;
-                // console.log('Extent: ', extent);
-                // console.log('tileSizeTot ', $tileSizeTot);
                 var xMap = extent[0] + (extent[2] - extent[0]) * xPixel / $tileSizeTot;
                 var yMap = extent[3] - (extent[3] - extent[1]) * yPixel / $tileSizeTot;
-                // console.log('Map: ', xMap, yMap);
                 view.setCenter([xMap, yMap]);
                 view.setZoom(maxZoom - 1);
             } else if (
@@ -115,17 +108,11 @@ angular.module('ubrGeoApp')
                 var y1Pixel = $routeParams.y1;
                 var x2Pixel = $routeParams.x2;
                 var y2Pixel = $routeParams.y2;
-                // console.log('Extent: Pixel: ', [x1Pixel,y1Pixel,x2Pixel,y2Pixel]);
-                // console.log('Map: Pixel: ', imgWidth, imgHeight);
-                // console.log('Extent: ', extent);
-                // console.log('tileSizeTot ', $tileSizeTot);
                 var x1Map = extent[0] + (extent[2] - extent[0]) * x1Pixel / $tileSizeTot;
                 var y1Map = extent[3] - (extent[3] - extent[1]) * y1Pixel / $tileSizeTot;
                 var x2Map = extent[0] + (extent[2] - extent[0]) * x2Pixel / $tileSizeTot;
                 var y2Map = extent[3] - (extent[3] - extent[1]) * y2Pixel / $tileSizeTot;
-                // console.log('Extent: Map: ', [x1Map,y1Map,x2Map,y2Map]);
                 view.fitExtent([x1Map,y1Map,x2Map,y2Map], mapSize);
-//                console.log('Zoom: ', view.getZoom());
             } else {
             
               var $mapWidth  = (extent[2] - extent[0]) * imgWidth  / $tileSizeTot;
@@ -140,15 +127,11 @@ angular.module('ubrGeoApp')
 //                var y1Pixel = $routeParams.y1;
 //                var x2Pixel = $routeParams.x2;
 //                var y2Pixel = $routeParams.y2;
-//                console.log('Extent: Pixel: ', [x1Pixel,y1Pixel,x2Pixel,y2Pixel]);
-//                console.log('Map: Pixel: ', imgWidth, imgHeight);
 //                xCenter = parseFloat(x1Pixel) + (parseFloat(x2Pixel) - parseFloat(x1Pixel))/2;                 
 //                yCenter = parseFloat(y1Pixel) - (parseFloat(y1Pixel) - parseFloat(y2Pixel))/2;
-//                console.log('Center: ', xCenter, yCenter);    
 //                
 //                xCenter = extent[0] + (extent[2] - extent[0]) * xCenter / $tileSizeTot;
 //                yCenter = extent[3] - (extent[3] - extent[1]) * yCenter / $tileSizeTot;
-//                console.log('Center: ', xCenter, yCenter);    
 //              } else {
                 xCenter = extent[0] + $mapWidth  / 2;
                 yCenter = extent[3] - $mapHeight / 2;
