@@ -5,3 +5,7 @@
 #map-nav {
     margin-bottom: 10px;
 }
+
+.year-range {
+    text-align: right;
+}
