@@ -20,8 +20,8 @@
     <table class="table table-condensed table-hover">
     <thead> 
        <tr>
-          <td colspan="2"> 
-              Karten: {{totalMaps}} Seite: {{currentPage}}/{{numPages}}  
+          <td colspan="2">
+            <div class="text-right">Karten: {{totalMaps}} Seite: {{currentPage}}/{{numPages}}</div>
           </td>    
       </thead>
     <tfoot>
