@@ -1,6 +1,6 @@
 <form>
     Jahr der Karte: 
-    <input type="text" size="4" ng-model="yearmin" ng-blur="yearChanged()"/> 
+    <input class="year-range" type="text" size="4" ng-model="yearmin" ng-blur="yearChanged()"/> 
     - 
-    <input type="text" size = "4" ng-model="yearmax" ng-blur="yearChanged()"/>
+    <input class="year-range" type="text" size = "4" ng-model="yearmax" ng-blur="yearChanged()"/>
 </form>
